Fix off-center text on iPhone

--- a/web/public/index.css
+++ b/web/public/index.css
@@ -171,6 +171,7 @@ a {
   width: 60px;
   margin: 3px;
   border: 2px solid var(--tile-border-color);
+  padding: 0;
 
   color: var(--tile-color);
 
